--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>pagina em construcao</title>
 </head>
 <body>
-    <img src="contrucao.gif" alt=""> 
+    <img src="construcao.gif" alt=""> 
 </body>
 </html>
