--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
     <link rel="stylesheet" href="ana.css">
     <title>pagina em construcao</title>
-</head>
+
+</head> 
 <body>
+    <b>pagina em construcao</b>
     <img src="construcao.gif" alt=""> 
+    <b>autor ana beatriz pereira da silva</b> <br> <br> <br> <br>
+    <b>curso ciracao de sites e plataformas digitais</b>
 </body>
 </html>
